--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,25 @@ environment:
   sdk: '>=2.18.1 <3.0.0'
 
 dependencies:
+  auto_route: ^5.0.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.5+1
+  formz: ^0.4.1 # TODO(cdobrovolny): maybe not needed, need to verify
+  freezed_annotation: ^2.1.0
+  hooks_riverpod: ^2.0.0-dev.9
+  json_serializable: ^6.4.1
 
 
 dev_dependencies:
+  auto_route_generator: ^5.0.2
+  build_runner: ^2.2.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.1.0+1
+  json_annotation: ^4.7.0
 
 flutter:
   uses-material-design: true
