--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   freezed_annotation: ^2.1.0
   hooks_riverpod: ^2.0.0-dev.9
   json_serializable: ^6.4.1
+  shared_preferences: ^2.0.15
 
 
 dev_dependencies:
