--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   auto_route: ^5.0.1
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.5+1
@@ -18,6 +19,7 @@ dependencies:
   freezed_annotation: ^2.1.0
   hooks_riverpod: ^2.0.0-dev.9
   json_serializable: ^6.4.1
+  retrofit: ^3.0.1+1
   shared_preferences: ^2.0.15
 
 
