--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,10 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   formz: ^0.4.1 # TODO(cdobrovolny): maybe not needed, need to verify
   freezed_annotation: ^2.1.0
-  hooks_riverpod: ^2.0.0-dev.9
+  hooks_riverpod: ^2.0.1
   json_serializable: ^6.4.1
   retrofit: ^3.0.1+1
+  riverpod_annotation: ^1.0.1
   shared_preferences: ^2.0.15
 
 
@@ -31,6 +32,7 @@ dev_dependencies:
     sdk: flutter
   freezed: ^2.1.0+1
   json_annotation: ^4.7.0
+  riverpod_generator: ^1.0.1
 
 flutter:
   uses-material-design: true
