--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   auto_route: ^5.0.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  firebase_core: ^1.24.0
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.5+1
