--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   firebase_core: ^1.24.0
+  firebase_crashlytics: ^2.8.13
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.5+1
