--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   auto_route: ^5.0.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  firebase_auth: ^3.11.2
   firebase_core: ^1.24.0
   firebase_crashlytics: ^2.8.13
   flutter:
