--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   auto_route: ^5.0.1
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  firebase_core: ^2.0.0
+  firebase_performance: ^0.9.0+1
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.5+1
@@ -20,7 +22,6 @@ dependencies:
   hooks_riverpod: ^2.0.2
   json_serializable: ^6.5.2
   retrofit: ^3.3.1
-  retrofit: ^3.0.1+1
   riverpod_annotation: ^1.0.4
   shared_preferences: ^2.0.15
 
